# app/controllers/comments_controller.rb
@@ -18,14 +18,15 @@ class CommentsController < BaseController
 
   def create
     parent_id = params[:comment][:parent_id]
+    content = params[:comment][:content]
     post_id = params[:post_id]
 
     if parent_id.present?
       parent_comment = Comment.find(parent_id)
-      @comment = parent_comment.replies.build(comment_params)
+      @comment = parent_comment.replies.build(post_id: post_id, content: content)
     else
       post = Post.find(post_id)
-      @comment = post.comments.build(comment_params)
+      @comment = post.comments.build(create_comment_params)
     end
 
     @comment.author = current_user
@@ -38,7 +39,7 @@ class CommentsController < BaseController
   end
 
   def update
-    if @comment.update(comment_params)
+    if @comment.update(update_comment_params)
       render json: serialize_comment(@comment)
     else
       unprocessable_entity(@comment)
@@ -57,13 +58,16 @@ class CommentsController < BaseController
   end
 
   def comments_scope
-    Post.find(params[:post_id]).comments
+    Post.includes(:author).find(params[:post_id]).comments
         .where(parent_id: params[:parent_id])
-        .includes(:author)
         .order(created_at: :desc)
   end
 
-  def comment_params
+  def create_comment_params
+    params.require(:comment).permit(:content, :parent_id)
+  end
+
+  def update_comment_params
     params.require(:comment).permit(:content)
   end
 
