# app/serializers/posts/index_serializer.rb
@@ -1,11 +1,7 @@
 # frozen_string_literal: true
 
 module Posts
-  class IndexSerializer < Panko::Serializer
-    attributes :id, :content, :comments_count
-
-    has_one :author, serializer: UserSerializer
-
-    delegate :comments_count, to: :object
+  class IndexSerializer < LiteSerializer
+    has_one :author, serializer: Users::ShowSerializer
   end
 end
