# app/serializers/user_serializer.rb
@@ -1,5 +1,0 @@
-# frozen_string_literal: true
-
-class UserSerializer < Panko::Serializer
-  attributes :id, :first_name, :last_name, :username, :second_name
-end
