# app/serializers/users/index_serializer.rb
@@ -1,0 +1,7 @@
+# frozen_string_literal: true
+
+module Users
+  class IndexSerializer < Panko::Serializer
+    attributes :id, :first_name, :last_name, :username, :second_name
+  end
+end
